objects/EUR_CRM_PRS_Seg_Aspect__c.object
<CustomObject>
    <description>This is created for the new approach for PROS and PROFS -  “PRS” (Pernod-Ricard Segmentation).

PR BG is the first country to use it.</description>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>RIGHT(LEFT(RecordType.DeveloperName,6),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Segmentation_BBP_Aspect_Name__c</fullName>
        <label>PRS Segmentation BBP Aspect Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Segmentation_BP_Aspect_Name__c</fullName>
        <label>PRS Segmentation BP Aspect Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Segmentation_IL_Aspect_Name__c</fullName>
        <label>PRS Segmentation IL Aspect Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Segmentation_VP_Aspect_Name__c</fullName>
        <label>PRS Segmentation VP Aspect Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PRS Segmentation Aspect (EU)</label>
    <listViews>
        <fullName>EUR_BE_PRS_Segmentation_Aspect_View</fullName>
        <booleanFilter>1 or 2 or 3 or 4</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Segmentation_BP_Aspect_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Segmentation_BBP_Aspect_Name__c</columns>
        <columns>EUR_CRM_Segmentation_IL_Aspect_Name__c</columns>
        <columns>EUR_CRM_Segmentation_VP_Aspect_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect__c.EUR_BE_PRS_Segmentation_Aspect_BBP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect__c.EUR_BE_PRS_Segmentation_Aspect_BP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect__c.EUR_BE_PRS_Segmentation_Aspect_Image_Level</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect__c.EUR_BE_PRS_Segmentation_Aspect_Volume_Potential</value>
        </filters>
        <label>EUR BE PRS Segmentation Aspect View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_PRS_Segmentation_Aspect_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Segmentation_BBP_Aspect_Name__c</columns>
        <columns>EUR_CRM_Segmentation_BP_Aspect_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect__c.EUR_BG_PRS_Segmentation_Aspect_BBP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect__c.EUR_BG_PRS_Segmentation_Aspect_BP</value>
        </filters>
        <label>EUR BG PRS Segmentation Aspect View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-SA-{00000000}</displayFormat>
        <label>PRS Segmentation Aspect No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Segmentation Aspect (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_PRS_Segmentation_Aspect_BBP</fullName>
        <active>true</active>
        <label>EUR BE PRS Segmentation Aspect - Brand Building Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Segmentation_Aspect_BP</fullName>
        <active>true</active>
        <label>EUR BE PRS Segmentation Aspect - Business Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Segmentation_Aspect_Image_Level</fullName>
        <active>true</active>
        <label>EUR BE PRS Segmentation Aspect - Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Segmentation_Aspect_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR BE PRS Segmentation Aspect - Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Segmentation_Aspect_BBP</fullName>
        <active>true</active>
        <label>EUR BG PRS Segmentation Aspect - Build Building Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Segmentation_Aspect_BP</fullName>
        <active>true</active>
        <label>EUR BG PRS Segmentation Aspect - Business Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRS_Segmentation_Aspect</fullName>
        <active>true</active>
        <label>PRS Segmentation Aspect</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>